# hr-cli

./: Cargo.toml
src/: commands.rs  main.rs  models.rs  storage.rs
src/commands/: export.rs  search.rs
tests/: e2e_cli.rs
