[package]
name = "hr-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
home = "0.5.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
regex = "1"
polars = { version = "0.41", features = ["lazy", "dtype-u8", "serde", "fmt", "csv", "json"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
